--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
